[build-system]
requires = ["setuptools>=61.0", "oldest-supported-numpy", "packaging>20.9"]
build-backend = "setuptools.build_meta"

[project]
name = "easyshap"
description = "A unified approach to explain the output of any machine learning model."
readme = "README.md"
license = {text = "MIT License"}
authors = [
  {name = "Andread Wiehl & Tobias Pitters", email = "info@tobiaspitters.com"},
]
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "xarray",
  "shap",
  "pandas"
]
classifiers = [
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

[project.optional-dependencies]
plots = ["matplotlib", "ipython"]
test = ["pytest", "scikit-learn"]
test-tf = ["tensorflow"]